Bug 322194 - Enter key not working when filter is applied
Summary: Enter key not working when filter is applied
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-07-10 13:24 UTC by Jaume
Modified: 2013-07-12 14:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaume 2013-07-10 13:24:24 UTC
I'm now on Telepathy (moving from Kopete) and I use only the keyboard for moving and filtering the contact list. When I write on the filter box to reduce it and find the contact I want, I press shift+tab twice to go to the list, and then the up and down arrow keys to select the contact I want to chat with. Once selected, I press the return key to open the chat window but now does not work (yes without filtering).

Reproducible: Always

Steps to Reproduce:
1. Open the filter box and write some name to filter the contact list
2. Select a contact (clicking on it or moving up/down with arrow keys)
3. Press the enter key
Actual Results:  
Nothing

Expected Results:  
Open the chat window for that contact
Comment 1 David Edmundson 2013-07-10 13:29:18 UTC
Thanks 

Confirming this bug.

FWIW, shift tab twice will go to the correct focus.
Some extra widget must be stealing focus in between.
Comment 2 David Edmundson 2013-07-12 10:42:21 UTC
Git commit 5fe2dfd33b47f8efc2793ee036b13fb36d834abb by David Edmundson.
Committed on 12/07/2013 at 10:35.
Pushed by davidedmundson into branch 'master'.

Check validity of a contact based on RowTypeRole not whether parent is valid

This makes us able to start chats whilst filtered

M  +4    -2    contact-list-widget.cpp

http://commits.kde.org/telepathy-contact-list/5fe2dfd33b47f8efc2793ee036b13fb36d834abb