Check validity of a contact based on RowTypeRole not whether parent is valid

This makes us able to start chats whilst filtered

BUG: 322194